# url-shortener

./: .env  Cargo.toml  README.md
migrations/: 20250123121940_initial.sql
src/: errors.rs  lib.rs  main.rs  routers.rs  state.rs
src/handlers/: mod.rs
src/models/: mod.rs  urls.rs
