[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
]}
axum-extra = { version = "0.10.0", features = ["typed-header"] }
thiserror = "2.0.9"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.12", features = ["io"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.198", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
sqlx = { version = "0.8.3", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
dotenv = "0.15.0"
nanoid = "0.4.0"